# ft_ls

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  REAMDE.md  autor  ft_ls.c  ft_ls.h  main.c  read_directory.c
file/: file.h  file_new.c  file_remove.c
includes/: file.h  ft_ls.h
includes/options/: options.h
includes/options/dirdata/: behavior.h  decorated.h  filter.h
lib/libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_char_prefix.c  ft_char_sufix.c  ft_isalnum.c  ft_isnum.c  ft_itoa.c  ft_lstby_num.c  ft_lstdelone.c  ft_lstfree_widtoute_data.c  ft_lstmap.c  ft_lstrev.c  ft_lstsort.c  ft_memalloc.c  ft_memccpy.c  ft_memcpy.c  ft_memset.c  ft_putchar.c  ft_putendl.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstrc.c  ft_putstrc_fd.c  ft_putstrs.c  ft_realloc.c  ft_strclr.c  ft_strcmp.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncpy.c  ft_strrchr.c  (+7 more)
libft/: CMakeLists.txt  ft_atoi.c  ft_bzero.c  ft_digcount.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_lstadd.c  ft_lstadd_back.c  ft_lstdel.c  ft_lstdelone_s.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstnew_c.c  ft_lstpush_back.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memdel.c  ft_memmove.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_quicksort.c  ft_str_word_ctr.c  ft_strcat.c  ft_strchr.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strlcat.c  ft_strlen.c  ft_strlenchr.c  ft_strncmp.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strstr.c  (+4 more)
options/: options.h  options_init.c  options_new.c
options/dirdata/begavior/: behavior_dirdata.c  behavior_dirdata.h
options/dirdata/decorated/: decorated_dirdata.c  decorated_dirdata.h
options/dirdata/filter/: filter_dirdata.c  filter_dirdata.h
src/: error_message.c  filter_args.c  ft_ls.c  illegal_option.c  main.c  read_directory.c  read_info.c
src/file/: file_get_acr.c  file_get_basename.c  file_get_filename.c  file_get_group.c  file_get_lcount.c  file_get_mimedate.c  file_get_owner.c  file_get_path.c  file_get_pathname.c  file_get_size.c  file_get_time.c  file_get_type.c  file_info_size_init.c  file_is_adir.c  file_is_dir.c  file_new.c  file_remove.c  new_file_info.c
src/options/: new_args.c  new_options_by_string.c  options_by_string.c  options_init.c  options_new.c
src/options/dirdata/: behavior.c  decorated.c  decorated_columns.c  decorated_default.c  filter.c
